--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Deverlopers
+description: Demo page with Just the Docs
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: 
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Repositories: https://github.com/lamnpham/lamnpham.github.io
